Add rating endpoint and service name to config

--- a/hotel-reservation-client.properties
+++ b/hotel-reservation-client.properties
@@ -1,3 +1,8 @@
-# Put application-specific config here (application name: client-config-app)
-some.property=coffeeeeee
+# Put application-specific config here
 some.other.property=is good
+
+# custom
+#endpoints
+custom.endpoint.ratings=/api/v1/ratings
+#services
+custom.service-name.ratings=rating-service
